<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/name_class"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_sub"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/company"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/logo_gits"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/txt_company"
        android:layout_marginStart="10dp"
        android:src="@drawable/logo_gits" />

    <TextView
        android:id="@+id/txt_kampus_merdeka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_sub"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/name_program"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/logo_kampus_merdeka"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/txt_company"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/logo_kampus_merdeka" />

    <TextView
        android:id="@+id/txt_participant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_gits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_peserta_studi_independen"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/participant"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/txt_participant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/peserta_studi_independen"
        app:civ_border_width="0dp" />

    <TextView
        android:id="@+id/txt_participant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/participant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>